force-app/main/default/objects/Incentive__c/Incentive__c.object-meta.xml
<CustomObject>
    <label>Incentive</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Incentive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>