force-app/main/default/objects/Incentive__c/fields/Estimated_Annual_GDV__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_GDV__c</fullName>
    <formula>Opportunity__r.attainable_ttv_monthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Annual GDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>