force-app/main/default/objects/Incentive__c/fields/First_Settled_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Settled_Transaction_Date__c</fullName>
    <formula>Account__r.First_Transaction_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Settled Transaction Date</label>
    <type>Date</type>
</CustomField>